Graduate conditioned turn performance gate